[gd_scene load_steps=5 format=2]

[ext_resource path="res://main/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/enviroment/background.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Apple.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )
Apple = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.05945
margin_right = -1.05945
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppleContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 218.132, 326.91 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 17.7097, 33.2511 )
